# forja-streaming

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/forja_streaming/: __init__.py  plugin.py
src/forja_streaming/templates/streaming_project/: Makefile  _dotfile_env.example  _dotfile_gitignore  dataforge.toml.j2  docker-compose.yml  pyproject.toml.j2
src/forja_streaming/templates/streaming_project/_dotfile_github/workflows/: ci.yml.j2
src/forja_streaming/templates/streaming_project/src/{{package_name}}/: __init__.py.j2
src/forja_streaming/templates/streaming_project/src/{{package_name}}/consumers/: __init__.py  base.py  kafka_consumer.py.j2
src/forja_streaming/templates/streaming_project/src/{{package_name}}/pipelines/: __init__.py  stream_pipeline.py.j2
src/forja_streaming/templates/streaming_project/src/{{package_name}}/producers/: __init__.py  base.py  kafka_producer.py.j2
src/forja_streaming/templates/streaming_project/src/{{package_name}}/schemas/: __init__.py
src/forja_streaming/templates/streaming_project/src/{{package_name}}/sinks/: __init__.py  base.py
src/forja_streaming/templates/streaming_project/src/{{package_name}}/streams/: __init__.py  base.py
