[project]
name = "forja-streaming"
version = "0.1.0"
description = "Plugin de forja — arquitectura streaming con Kafka"
requires-python = ">=3.10"
authors = [{ name = "Juan David Lopez Leon" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "forja>=1.0.1",
]

[project.optional-dependencies]
streaming = [
    "confluent-kafka>=2.4.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[project.entry-points."forja.plugins"]
streaming = "forja_streaming.plugin:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forja_streaming"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
